--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start:qa": "NODE_ENV=qa electron .",
+    "start:local": "NODE_ENV=local electron ."
   },
   "author": "",
   "license": "ISC"
