--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:qa": "NODE_ENV=qa electron .",
-    "start:local": "NODE_ENV=local electron ."
+    "start": "NODE_ENV=local electron ."
   },
   "author": "",
   "license": "ISC"
