added electron-forge with its config

--- a/package.json
+++ b/package.json
@@ -4,13 +4,28 @@
   "description": "effortless electron app",
   "main": "src/electronStarter.js",
   "dependencies": {
-    "electron": "^28.2.0"
+    "electron-squirrel-startup": "^1.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:qa": "NODE_ENV=qa electron .",
-    "start": "NODE_ENV=local electron ."
+    "start": "NODE_ENV=local electron .",
+    "start:forge": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-rpm": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
+    "@electron-forge/plugin-fuses": "^7.4.0",
+    "@electron/fuses": "^1.8.0",
+    "electron": "^28.3.3"
+  }
 }
